<resources>
    <string name="app_name">DCS Beginner Aid</string>
    <string name="app_credits">Created by Max Delaney 2020</string>
    <string name="app_logo">DCS Training Guide</string>
    <string name="helicopter_tile_textView">Helicopter</string>
    <string name="vehicle_tile_textView">Vehicle</string>
    <string name="weapon_tile_textview">Weapon</string>
    <string name="plane_tile_textView">Plane</string>
    <string name="weapon_button">weapon_button</string>
    <string name="vehicle_button">vehicle_button</string>
    <string name="helicopter_button">helicopter_button</string>
    <string name="plane_button">plane_button</string>
    <string name="navigation_drawer_open">"Open navigation drawer"</string>
    <string name="navigation_drawer_close">"Close navigation drawer"</string>
    <string name="helicopter_list_title">Helicopter List</string>
    <string name="splash_screen_disclaimer_body">This application is in no way affiliated or linked to Eagle Dynamics or their simulation product Dynamic Combat Simulator. \nThis application is a fan made project.</string>
    <string name="splash_screen_disclaimer_title">Disclaimer</string>
    <string name="pilot_photo_ham_item">Pilot Photo</string>
    <string name="plane_list_title">Plane List</string>
    <string name="vehicle_list_title">Vehicle List</string>
    <string name="weapon_list_title">Weapon List</string>
    <string name="ham_menu_title">DCS Training Guide</string>
    <string name="ham_menu_subtitle">Designed for flight simulator pilots</string>
    <string name="image_camera_text">Image from Camera</string>
    <string name="image_gallery_text">Image from Gallery</string>
    <string name="pilot_gallery_button">Gallery</string>
    <string name="pilot_camera_button">Camera</string>
</resources>