<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".Menu"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp" />

        <ImageView
            android:id="@+id/main_logo_imageview"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            android:backgroundTintMode="multiply"
            android:contentDescription="@string/app_logo"
            android:foregroundGravity="center"
            app:srcCompat="@drawable/dcs_main_activity_logo"
            tools:srcCompat="@drawable/dcs_main_activity_logo" />

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:padding="5dp">

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center">

                            <FrameLayout
                                android:id="@+id/plane_frame"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:padding="5dp">

                                <ImageButton
                                    android:id="@+id/plane_button"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/dcs_plane_activity_logo"
                                    android:contentDescription="@string/plane_button"
                                    android:scaleType="fitCenter" />

                                <TextView
                                    android:id="@+id/plane_textView"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="bottom|center_horizontal"
                                    android:background="#000000"
                                    android:elevation="10dp"
                                    android:text="@string/plane_tile_textView"
                                    android:textAlignment="center"
                                    android:textColor="#FFFFFF"
                                    android:textSize="18sp" />

                            </FrameLayout>

                            <FrameLayout
                                android:id="@+id/helicopter_frame"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:padding="5dp">

                                <ImageButton
                                    android:id="@+id/helicopter_button"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/dcs_helicopter_activity_logo"
                                    android:contentDescription="@string/helicopter_button"
                                    android:scaleType="fitCenter" />

                                <TextView
                                    android:id="@+id/helicopter_textView"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="bottom|center_horizontal"
                                    android:background="#000000"
                                    android:elevation="10dp"
                                    android:text="@string/helicopter_tile_textView"
                                    android:textAlignment="center"
                                    android:textColor="#FFFFFF"
                                    android:textSize="18sp" />

                            </FrameLayout>

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center">

                            <FrameLayout
                                android:id="@+id/weapon_frame"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:padding="5dp">

                                <ImageButton
                                    android:id="@+id/weapon_button"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/dcs_weapon_activity_logo"
                                    android:contentDescription="@string/weapon_button"
                                    android:scaleType="fitCenter" />

                                <TextView
                                    android:id="@+id/weapon_textView"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="bottom|center_horizontal"
                                    android:background="#000000"
                                    android:elevation="10dp"
                                    android:text="@string/weapon_tile_textview"
                                    android:textAlignment="center"
                                    android:textColor="#FFFFFF"
                                    android:textSize="18sp" />
                            </FrameLayout>

                            <FrameLayout
                                android:id="@+id/vehicle_frame"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:padding="5dp">

                                <ImageButton
                                    android:id="@+id/vehicle_button"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/dcs_vehicle_activity_logo"
                                    android:contentDescription="@string/vehicle_button"
                                    android:scaleType="fitCenter" />

                                <TextView
                                    android:id="@+id/vehicle_textView"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="bottom|center_horizontal"
                                    android:background="#000000"
                                    android:elevation="10dp"
                                    android:text="@string/vehicle_tile_textView"
                                    android:textAlignment="center"
                                    android:textColor="#FFFFFF"
                                    android:textSize="18sp" />
                            </FrameLayout>
                        </TableRow>

                    </TableLayout>

                    <TextView
                        android:id="@+id/credit_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/app_credits"
                        android:textAlignment="center" />
                </LinearLayout>
            </ScrollView>
        </FrameLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu">

    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>